@@ -1,17 +1,22 @@
 package com.portfolio.servicesImpl;
 
+import com.portfolio.dtos.ImageUploadResponse;
+import com.portfolio.dtos.ProjectImages.ProjectImageRequest;
 import com.portfolio.dtos.ProjectRequest;
 import com.portfolio.dtos.ProjectResponse;
 import com.portfolio.dtos.Skill.SkillDropdown;
 import com.portfolio.entities.NotificationTemplate;
 import com.portfolio.entities.Project;
+import com.portfolio.entities.ProjectImages;
 import com.portfolio.entities.Skill;
 import com.portfolio.enums.ExceptionCodeEnum;
 import com.portfolio.enums.WorkStatusEnum;
 import com.portfolio.exceptions.GenericException;
 import com.portfolio.repositories.ProfileRepository;
+import com.portfolio.repositories.ProjectImageRepository;
 import com.portfolio.repositories.ProjectRepository;
 import com.portfolio.repositories.SkillRepository;
+import com.portfolio.services.CloudinaryService;
 import com.portfolio.services.ProjectService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -19,8 +24,11 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,10 +38,11 @@ public class ProjectServiceImpl implements ProjectService {
     private final ProjectRepository projectRepository;
     private final SkillRepository skillRepository;
     private final ProfileRepository profileRepository;
+    private final CloudinaryService cloudinaryService;
+    private final ProjectImageRepository projectImageRepository;
 
     @Override
     public ProjectResponse create(ProjectRequest req) throws GenericException {
-
         if (!profileRepository.existsById(req.getProfileId())) {
             throw new GenericException(ExceptionCodeEnum.INVALID_ARGUMENT, "Profile not found");
         }
@@ -46,12 +55,21 @@ public class ProjectServiceImpl implements ProjectService {
                 .projectDescription(req.getProjectDescription())
                 .projectLink(req.getProjectLink())
                 .projectStartDate(req.getProjectStartDate())
-                .projectEndDate(req.getWorkStatus() == WorkStatusEnum.CURRENT ? null : req.getProjectEndDate())
+                .projectEndDate(
+                        req.getWorkStatus() == WorkStatusEnum.CURRENT
+                                ? null
+                                : req.getProjectEndDate()
+                )
                 .workStatus(req.getWorkStatus())
-                .projectImageUrl(req.getProjectImageUrl())
                 .skillIds(req.getSkillIds())
                 .build();
-        return mapToResponse(projectRepository.save(project));
+        Project savedProject = projectRepository.save(project);
+        saveProjectImages(
+                savedProject.getId(),
+                req.getProfileId(),
+                req.getProjectImages()
+        );
+        return mapToResponse(savedProject);
     }
 
     @Override
@@ -62,14 +80,31 @@ public class ProjectServiceImpl implements ProjectService {
         project.setProjectDescription(req.getProjectDescription());
         project.setProjectLink(req.getProjectLink());
         project.setProjectStartDate(req.getProjectStartDate());
-        project.setProjectEndDate(req.getWorkStatus() == WorkStatusEnum.CURRENT ? null : req.getProjectEndDate());
+        project.setProjectEndDate(
+                req.getWorkStatus() == WorkStatusEnum.CURRENT
+                        ? null
+                        : req.getProjectEndDate()
+        );
         project.setWorkStatus(req.getWorkStatus());
-        project.setProjectImageUrl(req.getProjectImageUrl());
         project.setSkillIds(req.getSkillIds());
-        return mapToResponse(projectRepository.save(project));
+        Project updatedProject = projectRepository.save(project);
+        projectImageRepository.deleteByProjectId(id);
+        saveProjectImages(
+                id,
+                req.getProfileId(),
+                req.getProjectImages()
+        );
+        return mapToResponse(updatedProject);
     }
 
-    // ---------------- GET BY ID ----------------
+    @Override
+    public ImageUploadResponse uploadProjectImage(String profileId, MultipartFile file) throws IOException, GenericException {
+        profileRepository.findById(profileId)
+                .orElseThrow(() -> new GenericException(ExceptionCodeEnum.PROFILE_NOT_FOUND, "Profile not found"));
+        Map uploadResult = cloudinaryService.uploadProfileImage(file);
+        return new ImageUploadResponse(uploadResult.get("secure_url").toString(), uploadResult.get("public_id").toString());
+    }
+
     @Override
     public ProjectResponse getById(String id) throws GenericException {
         return projectRepository.findById(id)
@@ -82,6 +117,7 @@ public class ProjectServiceImpl implements ProjectService {
         if (!projectRepository.existsById(id)) {
             throw new GenericException(ExceptionCodeEnum.PROJECT_NOT_FOUND, "Project not found");
         }
+        projectImageRepository.deleteByProjectId(id);
         projectRepository.deleteById(id);
         return "Project deleted successfully";
     }
@@ -120,7 +156,21 @@ public class ProjectServiceImpl implements ProjectService {
                 .toList();
     }
 
+    private void saveProjectImages(String projectId, String profileId, List<ProjectImageRequest> images) {
+        if (images == null || images.isEmpty()) return;
+        List<ProjectImages> projectImages = images.stream()
+                .map(img -> ProjectImages.builder()
+                        .projectId(projectId)
+                        .profileId(profileId)
+                        .url(img.getUrl())
+                        .publicId(img.getPublicId())
+                        .build())
+                .toList();
+        projectImageRepository.saveAll(projectImages);
+        }
+
     private ProjectResponse mapToResponse(Project project) {
+        List<ProjectImages> images = projectImageRepository.findByProjectId(project.getId());
         List<Skill> skills = project.getSkillIds() == null ? List.of() : skillRepository.findAllById(project.getSkillIds());
         return ProjectResponse.builder()
                 .id(project.getId())
@@ -130,17 +180,12 @@ public class ProjectServiceImpl implements ProjectService {
                 .projectStartDate(project.getProjectStartDate())
                 .projectEndDate(project.getProjectEndDate())
                 .workStatus(project.getWorkStatus())
-                .projectImageUrl(project.getProjectImageUrl())
-                .skills(
-                        skills.stream()
-                                .map(skill ->
-                                        new SkillDropdown(
-                                                skill.getId(),
-                                                skill.getLogo().getName(),
-                                                skill.getLogo().getUrl()
-                                        ))
-                                .collect(Collectors.toList())
-                )
-                .build();
+                .skills(skills.stream().map(skill -> new SkillDropdown(skill.getId(), skill.getLogo().getName(), skill.getLogo().getUrl())).toList())
+                .projectImages(images.stream().map(img -> {
+                    ProjectImageRequest dto = new ProjectImageRequest();
+                    dto.setUrl(img.getUrl());
+                    dto.setPublicId(img.getPublicId());
+                    return dto;
+                }).toList()).build();
     }
 }
